// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` Calc renders correctly 1`] = `
<div
  className="App"
>
  <div
    className="calculator-grid"
  >
    <div
      className="output"
    >
      <div
        className="current-operand"
      >
        0
      </div>
    </div>
    <button
      onClick={[Function]}
      type="button"
    >
      AC
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      +/-
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      %
    </button>
    <button
      className="orange-buttton"
      onClick={[Function]}
      type="button"
    >
      ÷
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      7
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      8
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      9
    </button>
    <button
      className="orange-buttton"
      onClick={[Function]}
      type="button"
    >
      x
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      6
    </button>
    <button
      className="orange-buttton"
      onClick={[Function]}
      type="button"
    >
      -
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="orange-buttton"
      onClick={[Function]}
      type="button"
    >
      +
    </button>
    <button
      className="span-two"
      onClick={[Function]}
      type="button"
    >
      0
    </button>
    <button
      onClick={[Function]}
      type="button"
    >
      .
    </button>
    <button
      className="orange-buttton"
      onClick={[Function]}
      type="button"
    >
      =
    </button>
  </div>
</div>
`;

exports[` Calculator renders correctly 1`] = `
<div
  className="contentCalculator"
>
  <div
    className="title"
  >
    <h1>
      Calculator!
    </h1>
    <h2>
      Lets do some math!
    </h2>
  </div>
  <div
    className="calculator"
  >
    <div
      className="App"
    >
      <div
        className="calculator-grid"
      >
        <div
          className="output"
        >
          <div
            className="current-operand"
          >
            0
          </div>
        </div>
        <button
          onClick={[Function]}
          type="button"
        >
          AC
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          +/-
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          %
        </button>
        <button
          className="orange-buttton"
          onClick={[Function]}
          type="button"
        >
          ÷
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          7
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          8
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          9
        </button>
        <button
          className="orange-buttton"
          onClick={[Function]}
          type="button"
        >
          x
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          4
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          5
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          6
        </button>
        <button
          className="orange-buttton"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          1
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          2
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          3
        </button>
        <button
          className="orange-buttton"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
        <button
          className="span-two"
          onClick={[Function]}
          type="button"
        >
          0
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          .
        </button>
        <button
          className="orange-buttton"
          onClick={[Function]}
          type="button"
        >
          =
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[` Home renders correctly 1`] = `
<div
  className="content"
>
  <h1>
    Home
  </h1>
  <h2>
    Welcome!
  </h2>
  <div
    className="parragraph"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus congue velit, ut bibendum mauris cursus a. Integer risus nisl, iaculis vel sodales sed, sollicitudin scelerisque magna. Phasellus eu volutpat justo, in placerat purus. Suspendisse et leo quis ligula tincidunt sollicitudin. Quisque pulvinar massa pharetra est semper g ravida. Vestibulum turpis nulla, fringilla quis lacinia non, venenatis a massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet tincidunt est. Nullam et malesuada ipsum, ac elementum metus. Aenean fermentum porttitor quam volutpat gravida. Etiam sed libero a lacus dignissim convallis. Donec facilisis nibh id velit egestas posuere. In efficitur aliquet tincidunt. Sed ut posuere eros, vel dictum lectus. Mauris nec lobortis lectus. Phasellus tortor turpis, pretium sit amet iaculis a, cursus et turpis.
    </p>
    <p>
      Phasellus posuere eros vel nulla lacinia, eu sodales orci faucibus. Etiam vehicula, velit maximus tempus ultrices, massa ipsum fermentum odio, mattis consequat lectus odio vel nulla. Mauris egestas tincidunt lacus dapibus luctus. Cras lobortis malesuada dui, quis lacinia est efficitur non. Donec sit amet velit sit amet odio dapibus ultrices. Nunc condimentum ut arcu auctor tincidunt. Nam eu enim venenatis, fringilla augue vitae, sagittis ante. Sed et eleifend nunc. Quisque a arcu in lacus pharetra viverra ac vitae lectus. Nam aliquam, turpis sit amet placerat ullamcorper, arcu dolor convallis dui, ut mollis lorem mauris eget lorem. Maecenas ligula ligula, imperdiet sit amet laoreet sollicitudin, tempor sed lectus. Phasellus nec maximus elit, sed dictum erat.
    </p>
  </div>
</div>
`;

exports[` Quotes renders correctly 1`] = `
<div
  className="content"
>
  <div
    className="nameQuote"
  >
    William Paul Thurston
  </div>
  <div
    className="quote"
  >
    Mathematics is not about numbers, equations, computations, or algorithms: It is about understanding
  </div>
</div>
`;
